vlib/v/checker/tests/inout/mul_op_wrong_left_type_err_b.out
vlib/v/checker/tests/inout/mul_op_wrong_left_type_err_b.v:2:5: error: left type of `*` cannot be type array_int
    1| fn main() {
    2|     [1,2,3] * 10
           ~~~~~~~
    3| }
